[project]
name = "oagi-hack-night"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-openai>=0.1.0",
    "oagi>=0.12.0",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
]
